--- a/index.html
+++ b/index.html
@@ -8,16 +8,28 @@
   <script src="js/StudentsController.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
   <div class="container" ng-controller="StudentsCtrl">
+    <div class="row" ng-show="students.length">
+      <div class="col-md-12">
+        <h4>Search Students</h4>
+        <form class="form-inline" role="form">
+          <div class="form-group">
+            <input ng-model="query" type="text" class="form-control" id="student-name" placeholder="Search">
+          </div>
+        </form>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Student List</h2>
+        <h2 ng-show="students.length && filtered.length">Student List</h2>
         <h4><em>Click name to edit</em></h4>
+        <h4 ng-show="students.length && !filtered.length">No Matches</h4>
         <ul>
-          <li ng-repeat="item in students">
+          <li ng-repeat="item in filtered = (students | filter:query)">
             <span ng-click="editing = true" ng-hide="editing">
-              {{item.name}} <a  ng-click="deleteStudent(item)">Delete</a>
+              {{item.name}} <a ng-click="deleteStudent(item)">Delete</a>
             </span>
             <span class="form-group" ng-show="editing" ng-submit="editing = false">
               <form class="form-inline" role="form">
